terraform/sg.tf
resource "aws_security_group" "node_group_one" {
  name_prefix = "node_group_one"
  vpc_id      = "${aws_vpc.prod-vpc.id}"

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8",
    ]
  }
}
